Fix horizontal scroll

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -8,7 +8,7 @@
   display: flex;
   height: rem(72);
   justify-content: space-between;
-  margin-right: calc(100% - 100vw);
+  margin-right: 0;
   padding: 0.5rem 0.9375rem;
   position: relative;
   z-index: 60;
